<resources>

    <string name="app_name">ProyectoUno</string>
    <string name="registro_usuario">Registro Usuario</string>
    <string name="ingresa_nombre">Ingresa Nombre</string>
    <string name="registrar">Registrar</string>
    <string name="ingresa_rut">Ingrese Rut</string>
    <string name="ingresa_clave">Ingresa Clave</string>
    <string name="ingresa_email">Ingresa Email</string>
    <string name="error_rut">Rut invalido</string>
    <string name="error_nombre">Ingrese un nombre correcto</string>
    <string name="error_clave">Error en contraseña</string>
    <string name="error_email">Error email</string>
    <string name="ingresa_login">Ingresa Login</string>
    <string name="ingresa_contrase_a">Ingresa Contraseña</string>
    <string name="ingresa">Ingresa</string>
    <string name="detalle_usuario">Detalle Usuario</string>
    <string name="edad">Edad</string>
    <string name="direccion">Direccion</string>
    <string name="hobby">Hobby</string>
    <string name="crear_cuenta">Crear Cuenta</string>

</resources>