<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8F989F"
    tools:context=".detalle_usuario.presentation.DetalleUsuarioFragment">


    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/detalle_usuario"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_Foto"
        android:minHeight="150dp"
        android:minWidth="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre"
        tools:src="@mipmap/ic_launcher" />


    <TextView
        android:id="@+id/tv_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toEndOf="@+id/iv_Foto"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre" />

    <TextView
        android:id="@+id/tv_Direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direccion"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/iv_Foto"
        app:layout_constraintTop_toBottomOf="@+id/tv_edad" />

    <TextView
        android:id="@+id/tv_Hobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hobby"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/iv_Foto"
        app:layout_constraintTop_toBottomOf="@+id/tv_Direccion" />

</androidx.constraintlayout.widget.ConstraintLayout>